--- a/P5 UNO/index.html
+++ b/P5 UNO/index.html
@@ -1,14 +1,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Rudo</title>
+    <title>P5 !</title>
     <link href="style.css" rel="stylesheet"></link>
   </head>
   <body>
     <script src="p5.js"></script>
-    <script src="Tile.js"></script>
-    <script src="Player.js"></script>
-    <script src="layout.js"></script>
+    <script src="card.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
