--- a/P5 Monopoly/index.html
+++ b/P5 Monopoly/index.html
@@ -7,6 +7,7 @@
   <body>
     <script src="p5.js"></script>
     <script src="Tile.js"></script>
+    <script src="Player.js"></script>
     <script src="loop.js"></script>
     <script src="layout.js"></script>
     <script src="main.js"></script>
